--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -36,12 +36,26 @@
    ],
    "source": [
     "name : str = 'Diego'\n",
-    "print(f'Mi nombre es: {name}')"
+    "print(f'Mi nombre es: {name}')          "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hello                                                                                                                                                                    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Why?\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,10 +85,17 @@
     "# evenly sampled time at 200ms intervals\n",
     "t = np.arange(0., 5., 0.2)\n",
     "\n",
-    "# red dashes, blue squares and green triangles\n",
+    "# red dashes, blue squares and green triangles`j```\n",
     "plt.plot(t, t, 'r--', t, t**2, 'bs', t, t**3, 'g^')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
